--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -1,13 +1,13 @@
 .location {
-
 }
 
 .location__wrapper {
-  padding: 26px 20px;
+  padding-top: 26px;
+  padding-bottom: 26px;
 }
 
 .location__invitation {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
