--- a/source/less/blocks/additional-product-card.less
+++ b/source/less/blocks/additional-product-card.less
@@ -11,7 +11,7 @@
   margin: 0;
   margin-bottom: 14px;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
