--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -1,12 +1,13 @@
 .additional-products {
-  padding: 25px 20px 35px;
+  padding-top: 25px;
+  padding-bottom: 35px;
 }
 
 .additional-products__title {
   margin: 0;
   margin-bottom: 36px;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
@@ -30,7 +31,7 @@
   color: @white;
   text-align: center;
 
-  background-color: @green;
+  background-color: rgba(@green, 0.85);
   background-image: url("../img/gift-background.jpg");
   background-repeat: no-repeat;
   background-position: center;
