--- a/source/less/blocks/application-form.less
+++ b/source/less/blocks/application-form.less
@@ -1,7 +1,8 @@
 .application-form {
-  padding: 27px 20px 32px;
+  padding-top: 27px;
+  padding-bottom: 32px;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 18px;
@@ -21,7 +22,9 @@
 }
 
 .application-form__personal {
-
+  margin: 0;
+  padding-bottom: 24px;
+  border: none;
 }
 
 .application-form__form-label {
@@ -29,8 +32,13 @@
 }
 
 .application-form__form-input {
+  font: inherit;
+  line-height: 18px;
+  color: @dark-gray;
+  text-transform: uppercase;
+
   &::placeholder {
-    font-family: "Oswald", sans-serif;
+    font-family: "Oswald", "Arial", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 18px;
@@ -41,7 +49,12 @@
 }
 
 .application-form__radio {
-
+  margin: 0;
+  padding-top: 22px;
+  padding-bottom: 19px;
+  border: none;
+  border-top: 1px solid @gray;
+  border-bottom: 1px solid @gray;
 }
 
 .application-form__radio-label {
@@ -53,10 +66,19 @@
 }
 
 .application-form__contacts {
+  margin: 0;
+  padding-top: 26px;
+  padding-bottom: 24px;
+  border: none;
+}
 
+.application-form__comment {
+  padding-bottom: 23px;
 }
 
 .application-form__title {
+  margin-bottom: 35px;
+
   font-size: 24px;
   line-height: 26px;
   font-weight: 400;
@@ -65,7 +87,7 @@
 }
 
 .application-form__textarea {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 18px;
@@ -74,7 +96,9 @@
 }
 
 .application-form__checkbox {
-
+  margin: 0;
+  padding-bottom: 34px;
+  border: none;
 }
 
 .application-form__checkbox-label {
@@ -92,7 +116,7 @@
 .application-form__note {
   display: block;
 
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 14px;
   line-height: 16px;
   color: @black;
