--- a/source/less/blocks/approaches.less
+++ b/source/less/blocks/approaches.less
@@ -1,5 +1,5 @@
 .approaches {
-  padding: 0 20px;
+
 }
 
 .approaches__list {
@@ -18,7 +18,7 @@
 .approaches__title {
   margin: 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 37px;
