--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -3,7 +3,7 @@
   padding: 14px 26px;
 
   text-decoration: none;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
