--- a/source/less/blocks/estimate-item.less
+++ b/source/less/blocks/estimate-item.less
@@ -3,7 +3,7 @@
 }
 
 .estimate-item__value {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
