--- a/source/less/blocks/estimate.less
+++ b/source/less/blocks/estimate.less
@@ -11,7 +11,7 @@
 }
 
 .estimate__price {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
