--- a/source/less/blocks/link-accent.less
+++ b/source/less/blocks/link-accent.less
@@ -4,7 +4,7 @@
   margin: 0;
 
   text-decoration: none;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 16px;
   color: @black;
