--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,7 +1,7 @@
 .main-header {
   background-color: @white;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 20px;
   font-weight: 500;
   line-height: 20px;
