--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,11 +1,9 @@
 .page-footer {
-  padding: 40px 20px 22px;
+  padding-top: 40px;
+  padding-bottom: 22px;
 
-  font-family: "Lato", sans-serif;
   font-size: 16px;
-  font-weight: 400;
   line-height: 20px;
-  color: @dark-gray;
 
   background-color: @light-gray;
 }
