--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -20,7 +20,7 @@
   margin: 0;
   margin-bottom: 18px;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
