--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -1,10 +1,14 @@
 .title-typical() {
   margin: 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald","Arial", sans-serif;
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
   color: @black;
   text-transform: none;
+}
+
+.container {
+  padding: 0 20px;
 }
