--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,87 +1,44 @@
 //fonts
-@font-face {
-  font-family: "Lato";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/lato/Lato-Regular.woff2") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Lato";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/lato/Lato-Regular.woff") format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/oswald/oswaldregular.woff2") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/oswald/oswaldregular.woff") format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-weight: 500;
-  src: url("../fonts/oswald/oswaldmedium.woff2") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-weight: 500;
-  src: url("../fonts/oswald/oswaldmedium.woff") format("woff");
-  font-display: swap;
-}
+@import "fonts.less";
 
 //colors
-@import "blocks/colors.less";
+@import "colors.less";
 
 //mixins
-@import "blocks/mixins.less";
+@import "mixins.less";
+
+//body
+@import "body.less";
 
 // header
-@import "blocks/header/main-header.less";
-@import "blocks/header/main-nav.less";
-@import "blocks/header/navigation-list.less";
+@import "blocks/main-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/navigation-list.less";
 
 //main-index
-@import "blocks/main/main-container.less";
-@import "blocks/main/banner.less";
-@import "blocks/main/button.less";
-@import "blocks/main/approaches.less";
-@import "blocks/main/link-accent.less";
-@import "blocks/main/principles-of-work.less";
-@import "blocks/main/live-example.less";
-@import "blocks/main/estimate.less";
-@import "blocks/main/estimate-item.less";
-@import "blocks/main/before-after.less";
-@import "blocks/main/location.less";
-@import "blocks/main/address-text.less";
+@import "blocks/main-container.less";
+@import "blocks/banner.less";
+@import "blocks/button.less";
+@import "blocks/approaches.less";
+@import "blocks/link-accent.less";
+@import "blocks/principles-of-work.less";
+@import "blocks/live-example.less";
+@import "blocks/estimate.less";
+@import "blocks/estimate-item.less";
+@import "blocks/before-after.less";
+@import "blocks/location.less";
+@import "blocks/address-text.less";
 // main-form
-@import "blocks/main/application-form.less";
+@import "blocks/application-form.less";
 // main-catalog
-@import "blocks/main/product-card.less";
-@import "blocks/main/main-products.less";
-@import "blocks/main/show-more-card.less";
-@import "blocks/main/button-show-more.less";
-@import "blocks/main/additional-products.less";
-@import "blocks/main/additional-product-card.less";
+@import "blocks/product-card.less";
+@import "blocks/main-products.less";
+@import "blocks/show-more-card.less";
+@import "blocks/button-show-more.less";
+@import "blocks/additional-products.less";
+@import "blocks/additional-product-card.less";
 
 
 //footer
-@import "blocks/footer/social-list.less";
-@import "blocks/footer/page-footer.less";
+@import "blocks/social-list.less";
+@import "blocks/page-footer.less";
