--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,8 +7,8 @@
 //mixins
 @import "mixins.less";
 
-//body
-@import "body.less";
+//global
+@import "global.less";
 
 // header
 @import "blocks/main-header.less";
@@ -16,6 +16,7 @@
 @import "blocks/navigation-list.less";
 
 //main-index
+@import "blocks/page.less";
 @import "blocks/main-container.less";
 @import "blocks/banner.less";
 @import "blocks/button.less";
