--- a/source/less/blocks/address-text.less
+++ b/source/less/blocks/address-text.less
@@ -3,5 +3,10 @@
 }
 
 .address-text__paragraph {
+  margin: 0;
 
+  @media (min-width: @tablet-width) {
+    margin: 0.5em 0;
+    text-align: right;
+  }
 }
