--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,6 +10,9 @@
 //global
 @import "global.less";
 
+//viewports
+@import "viewports.less";
+
 // header
 @import "blocks/main-header.less";
 @import "blocks/main-nav.less";
