--- a/source/less/blocks/approaches.less
+++ b/source/less/blocks/approaches.less
@@ -1,22 +1,44 @@
 .approaches {
-
 }
 
 .approaches__list {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    gap: 80px;
+  }
 }
 
 .approaches__item {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 20px;
-  padding: 24px 20px 23px;
+  padding: 24px 33px 23px 20px;
+  min-width: 280px;
 
   background-color: @light-gray;
+
+  @media (min-width: @tablet-width) {
+    padding: 77px 62px 53px 52px;
+    margin-bottom: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-grow: 1;
+    min-width: 570px;
+    padding: 77px 67px 55px 52px;
+    margin-bottom: 71px;
+  }
 }
 
 .approaches__title {
   margin: 0;
+  padding-left: 91px;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
@@ -24,12 +46,47 @@
   line-height: 37px;
   color: @black;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    max-width: 340px;
+    padding: 0;
+
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 100%;
+    padding-left: 214px;
+  }
 }
 
 .approaches__description {
-  margin: 22px 0;
+  margin: 29px 0 23px;
+
+  @media (min-width: @tablet-width) {
+    max-width: 340px;
+    margin: 24px 0 48px;
+
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 100%;
+    margin: 73px 0 23px;
+  }
 }
 
 .approaches__link {
   border-top: 1px solid @gray;
+
+  @media (min-width: @tablet-width) {
+    max-width: 340px;
+
+    font-size: 20px;
+    line-height: 30px;
+
+    border-top: none;
+  }
 }
