--- a/source/less/blocks/banner.less
+++ b/source/less/blocks/banner.less
@@ -1,6 +1,5 @@
 .banner {
-  margin-bottom: 178px; /* Правда, получается, что элемент толкает сам себя */
-  padding-top: 27px;
+  margin-bottom: 20px;
   position: relative;
 
   font-family: "Oswald", "Arial", sans-serif;
@@ -9,41 +8,127 @@
   line-height: 14px;
   color: @white;
 
-  background-image: url("../img/banner-background.jpg");
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: 302px 302px;
+  @media (min-width: @tablet-width) {
+      color: @black;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: static;
+  }
 
   &::before {
     content: "";
     display: block;
     height: 302px;
+    width: 100%;
     background-color: @green;
+    background-image: url("../img/banner-background.jpg");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
     position: absolute;
     top: 0;
     right: 0;
     left: 0;
     z-index: -1;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+
+    @media (min-width: @desktop-width) {
+      display: block;
+      height: 694px;
+      width: 50%;
+      margin-left: 50%;
+      background-position: left;
+    }
+  }
+}
+
+.banner__wrapper {
+  padding-top: 27px;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    padding: 27px 117px 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 111px 190px 186px;
+    position: relative;
   }
 }
 
 .banner__title {
+  margin: 0;
   margin-bottom: 25px;
 
   text-align: center;
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
+
+  @media (min-width: @tablet-width) {
+      margin-bottom: 41px;
+      text-align: left;
+      font-size: 60px;
+      line-height: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 420px;
+    margin-bottom: 40px;
+  }
 }
 
 .banner__slogan {
+  margin: 0;
   margin-bottom: 30px;
 
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 49px;
+    text-align: left;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 420px;
+    margin-bottom: 52px;
+  }
 }
 
 .banner__image  {
   display: block;
-  margin-bottom: 3px;
+  margin: 0 auto 3px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: -83px;
+    order: 1;
+    z-index: -1;
+
+    width: 709px;
+    height: auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    position: absolute;
+    top: 32px;
+    right: 23%;
+
+    width: 552px;
+    height: auto;
+  }
+};
+
+.banner__button {
+  @media (min-width: @tablet-width) {
+    width: 244px;
+  }
 }
