--- a/source/less/blocks/live-example.less
+++ b/source/less/blocks/live-example.less
@@ -1,8 +1,42 @@
 .live-example {
   padding-top: 25px;
-  padding-bottom: 30px;
+  padding-bottom: 40px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 
   background-color: @gray-3;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 100px;
+
+    background-color: @white;
+    &::after {
+      content: "";
+      background-color: @gray-3;
+      height: 462px;
+      width: 100%;
+      position: absolute;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      z-index: 0;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding-bottom: 75px;
+
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+}
+
+.live-example__text-wrapper {
+  z-index: 1;
+  @media (min-width: @desktop-width) {
+    max-width: 440px;
+  }
 }
 
 .live-example__title {
@@ -10,15 +44,44 @@
   line-height: 40px;
 
   margin-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 63px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 146px;
+  }
 }
 
 
 .live-example__description {
+  margin: 0;
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 54px;
+
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 69px;
+  }
 }
 
 .live-example__wrapper {
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 54px;
+  }
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+  }
 }
 
 .live-example__slider {
