--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,4 +1,6 @@
 .main-header {
+  display: flex;
+  flex-direction: column;
   background-color: @white;
 
   font-family: "Oswald", "Arial", sans-serif;
@@ -7,20 +9,54 @@
   line-height: 20px;
   color: @black;
   text-transform: uppercase;
-}
 
-.main-header__logo-wrapper {
+  @media (min-width: @tablet-width) {
+    padding-top: 24px;
+    padding-bottom: 29px;
 
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 53px;
+
+    background-color: transparent;
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .main-header__logo {
-
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 18px;
+  @media (min-width: @tablet-width) {
+    padding: 0;
+  }
 }
 
 .main-header__logo-image {
+  display: block;
+  height: 38px;
+  width: 191px;
 
+  @media (min-width: @tablet-width) {
+    height: 52px;
+    width: 174px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 59px;
+    width: 202px;
+  }
 }
 
 .main-header__nav {
 
 }
+
