--- a/source/less/blocks/principles-of-work.less
+++ b/source/less/blocks/principles-of-work.less
@@ -1,19 +1,65 @@
 .principles-of-work {
   padding-bottom: 30px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 15px;
+    padding-right: 75px;
+    padding-bottom: 0;
+
+    border-bottom: 1px solid @gray-2;
+  }
+
+  @media (min-width: @desktop-width) {
+    border: none;
+  }
 }
 
 .principles-of-work__title {
   .title-typical;
   line-height: 40px;
   margin-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 0;
+  }
 }
 
 .principles-of-work__list {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: grid;
+
+  @media (min-width: @tablet-width) {
+    padding: 32px 0 47px;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    gap: 37px 134px;
+  }
+
+  @media (min-width: @tablet-width) {
+    .grid-desktop;
+    padding: 32px 0 69px;
+  }
 }
 
 .principles-of-work__item {
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    max-width: 250px;
+  }
+}
+
+.principles-of-work__description {
+  margin: 0;
+  @media (min-width: @tablet-width) {
+    width: 245px;
+
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
