--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -1,6 +1,17 @@
 .product-card {
   padding: 20px;
   border-top: 1px solid @gray-4;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 36px 39px;
+    border: none;
+    background-color: @light-gray;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0 35px 40px;
+    border: none;
+  }
 }
 
 .product-card__image-link {
@@ -26,11 +37,25 @@
   line-height: 20px;
   color: @light-black;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 21px;
+  }
 }
 
 .product-card__properties-list {
   font-size: 12px;
   line-height: 16px;
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 16px;
+  }
 }
 
 .product-card__property {
