--- a/source/less/global.less
+++ b/source/less/global.less
@@ -2,11 +2,11 @@ body {
   margin: 0
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  object-fit: contain;
-}
+//img {
+//  max-width: 100%;
+//  height: auto;
+//  object-fit: contain;
+//}
 
 a {
   text-decoration: none;
