Вносит правки по крупным сеткам

--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -75,7 +75,7 @@
   background-image: url("../img/gift-background.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
 
   @media (min-width: @desktop-width) {
     grid-column: 4 / 5;
