--- a/source/less/blocks/estimate.less
+++ b/source/less/blocks/estimate.less
@@ -27,14 +27,12 @@
 }
 
 .estimate__item {
-  margin-bottom: 20px;
-
-  @media (min-width: @desktop-width) {
-    margin: 0;
-  }
+  margin: 0;
 }
 
 .estimate__price {
+  display: block;
+  margin: 0;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
