--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -60,6 +60,7 @@
 .location__image {
   display: block;
   margin: 0 auto;
+  width: 100%;
 
   @media (min-width: @desktop-width) {
     z-index: -1;
