--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -5,16 +5,20 @@
 .main-container__title {
   .title-typical;
 
-  padding: 27px 20px 40px;
+  padding: 0 20px;
+  max-width: @desktop-width;
+  margin: 27px auto 40px;
 
   @media (min-width: @tablet-width) {
-    padding: 64px 30px 82px;
+    margin: 64px auto 82px;
+    padding: 0 30px;
 
     font-size: 60px;
     line-height: 60px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 45px 110px 163px;
+    margin: 45px auto 163px;
+    padding: 0 110px;
   }
 }
