--- a/source/less/blocks/application-form.less
+++ b/source/less/blocks/application-form.less
@@ -47,14 +47,14 @@
 
 .application-form__personal {
   margin: 0;
-  padding-bottom: 24px;
+  margin-bottom: 24px;
   display: flex;
   flex-direction: column;
   gap: 14px;
   border: none;
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 71px;
+    margin-bottom: 71px;
   }
 
   @media (min-width: @desktop-width) {
@@ -101,7 +101,7 @@
   border-bottom: 1px solid @gray;
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 71px;
+    margin-bottom: 71px;
     border: none;
   }
 
@@ -147,23 +147,29 @@
   flex-direction: column;
   gap: 20px;
   margin: 0;
-  padding-top: 26px;
-  padding-bottom: 24px;
+  margin-bottom: 24px;
 
   border: none;
+  @media (min-width: @tablet-width) {
+    margin-bottom: 65px;
+  }
 
   @media (min-width: @desktop-width) {
     display: grid;
+    margin-bottom: 67px;
     grid-template-columns: 1fr 1fr;
-    gap: 80px;
+    column-gap: 80px;
   }
 }
 
 .application-form__comment {
-  padding-bottom: 23px;
+  @media (min-width: @desktop-width) {
+    .grid-desktop;
+  }
 }
 
 .application-form__title {
+  margin: 0;
   margin-bottom: 35px;
   grid-column: 1 / -1;
 
@@ -203,6 +209,10 @@
     font-size: 20px;
     line-height: 30px;
   }
+
+  @media (min-width: @desktop-width) {
+    grid-column: 1 / -1;
+  }
 }
 
 .application-form__checkbox {
@@ -211,7 +221,7 @@
   gap: 13px;
 
   margin: 0;
-  padding-bottom: 34px;
+  margin-bottom: 34px;
   border: none;
   @media (min-width: @tablet-width) {
     padding-bottom: 54px;
