--- a/source/less/blocks/approaches.less
+++ b/source/less/blocks/approaches.less
@@ -1,4 +1,5 @@
 .approaches {
+
 }
 
 .approaches__list {
@@ -38,6 +39,7 @@
 
 .approaches__title {
   margin: 0;
+  margin-bottom: 29px;
   padding-left: 91px;
 
   font-family: "Oswald", "Arial", sans-serif;
@@ -49,6 +51,7 @@
 
   @media (min-width: @tablet-width) {
     max-width: 340px;
+    margin-bottom: 24px;
     padding: 0;
 
     font-size: 36px;
@@ -57,16 +60,18 @@
 
   @media (min-width: @desktop-width) {
     max-width: 100%;
+    margin-bottom: 73px;
     padding-left: 214px;
   }
 }
 
 .approaches__description {
-  margin: 29px 0 23px;
+  margin: 0;
+  margin-bottom: 23px;
 
   @media (min-width: @tablet-width) {
     max-width: 340px;
-    margin: 24px 0 48px;
+    margin-bottom: 48px;
 
     font-size: 16px;
     line-height: 24px;
@@ -74,7 +79,7 @@
 
   @media (min-width: @desktop-width) {
     max-width: 100%;
-    margin: 73px 0 23px;
+    margin-bottom: 23px;
   }
 }
 
