--- a/source/less/blocks/estimate-item.less
+++ b/source/less/blocks/estimate-item.less
@@ -1,8 +1,18 @@
 .estimate-item {
+  width: 124px;
+  padding: 15px 20px 0;
 
+  @media (min-width: @tablet-width) {
+    width: 162px;
+    padding: 15px 20px 0;
+  }
 }
 
 .estimate-item__value {
+  display: block;
+  margin: 0;
+  margin-bottom: 7px;
+
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
@@ -10,6 +20,10 @@
   color: @black;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 11px;
+  }
 }
 
 .estimate-item__parameter {
