--- a/source/less/blocks/navigation-list.less
+++ b/source/less/blocks/navigation-list.less
@@ -20,7 +20,7 @@
   border-top: 1px solid @gray-2;
 
   @media (min-width: @tablet-width) {
-      padding-left: 34px;
+      margin-left: 34px;
       border: none;
   }
 }
