--- a/source/less/blocks/principles-of-work.less
+++ b/source/less/blocks/principles-of-work.less
@@ -39,7 +39,7 @@
     gap: 37px 134px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     .grid-desktop;
     padding: 32px 0 69px;
   }
