--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -12,6 +12,7 @@
 .container {
   padding: 0 20px;
   margin: 0 auto;
+  max-width: @desktop-width;
 
   @media (min-width: @tablet-width) {
     padding: 0 30px;
