Вносит изменения в контейнер на странице формы

--- a/source/less/colors.less
+++ b/source/less/colors.less
@@ -7,6 +7,7 @@
 @gray-3: #eaeaea;
 @gray-4: #ebebeb;
 @gray-5: #cdcdcd;
+@gray-6: #666666;
 @light-gray: #f2f2f2;
 @gray: #d9d9d9;
 @dark-gray: #444444;
