--- a/source/less/blocks/application-form.less
+++ b/source/less/blocks/application-form.less
@@ -1,6 +1,8 @@
 .application-form {
   padding-top: 27px;
   padding-bottom: 32px;
+  margin: 0 auto;
+  max-width: @desktop-width;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
@@ -39,6 +41,7 @@
   @media (min-width: @desktop-width) {
     padding-left: 110px;
     padding-right: 110px;
+    margin-bottom: 65px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 80px;
