--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -28,6 +28,7 @@
 .container--form {
   padding: 0 20px;
   margin: 0 auto;
+  max-width: @desktop-width;
 
   @media (min-width: @tablet-width) {
     padding: 0 70px;
