--- a/source/less/blocks/approaches.less
+++ b/source/less/blocks/approaches.less
@@ -17,6 +17,7 @@
 
 .approaches__item {
   display: flex;
+  position: relative;
   flex-direction: column;
   margin-bottom: 20px;
   padding: 24px 33px 23px 20px;
@@ -35,12 +36,57 @@
     padding: 77px 67px 55px 52px;
     margin-bottom: 71px;
   }
+
+  &--weight-loss {
+    &::before {
+      background-image: url("../img/cat-slim.svg");
+    }
+  }
+
+  &--weight-gain {
+    &::before {
+      background-image: url("../img/cat-pro.svg");
+    }
+  }
+
+  &::before {
+    content: "";
+    width: 67px;
+    height: 50px;
+    background-size: auto  50px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 22px;
+    left: 13px;
+
+    @media (min-width: @tablet-width) {
+      background-size: auto  200px;
+      width: 268px;
+      height: 200px;
+      top: auto;
+      left: auto;
+      right: 28px;
+      bottom: 80px;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 134px;
+      height: 100px;
+      background-size: auto  100px;
+      top: 47px;
+      left: 33px;
+      right: auto;
+      bottom: auto;
+    }
+  }
 }
 
 .approaches__title {
   margin: 0;
   margin-bottom: 29px;
-  padding-left: 91px;
+  margin-left: 71px;
+  padding: 0;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
@@ -52,7 +98,7 @@
   @media (min-width: @tablet-width) {
     max-width: 340px;
     margin-bottom: 24px;
-    padding: 0;
+    margin-left: 0;
 
     font-size: 36px;
     line-height: 36px;
@@ -61,7 +107,7 @@
   @media (min-width: @desktop-width) {
     max-width: 100%;
     margin-bottom: 73px;
-    padding-left: 214px;
+    margin-left: 162px;
   }
 }
 
@@ -70,7 +116,8 @@
   margin-bottom: 23px;
 
   @media (min-width: @tablet-width) {
-    max-width: 340px;
+    width: 50%;
+    min-height: 82px;
     margin-bottom: 48px;
 
     font-size: 16px;
@@ -78,7 +125,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    max-width: 100%;
+    width: 100%;
     margin-bottom: 23px;
   }
 }
