--- a/source/less/colors.less
+++ b/source/less/colors.less
@@ -1,13 +1,22 @@
 @white: #ffffff;
-@black: #000000;
-@light-black: #222222;
-@light-black-2: #111111;
-@green: #68b738;
+@light-gray: #f2f2f2;
+@gray: #d9d9d9;
 @gray-2: #e6e6e6;
 @gray-3: #eaeaea;
 @gray-4: #ebebeb;
 @gray-5: #cdcdcd;
 @gray-6: #666666;
-@light-gray: #f2f2f2;
-@gray: #d9d9d9;
+@gray-7: #e7e7e7;
+@gray-8: #d3d3d3;
+@gray-9: #bababa;
 @dark-gray: #444444;
+@light-black: #222222;
+@light-black-2: #111111;
+@black: #000000;
+@green: #68b738;
+@green-2: #5eaa2f;
+@red: #ff8282;
+
+
+
+
