--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -1,7 +1,6 @@
 .additional-products {
-  display: grid;
-  padding-top: 25px;
-  padding-bottom: 35px;
+  .fieldset-decoration;
+  margin-bottom: 35px;
 
   @media (min-width: @tablet-width) {
     padding-bottom: 76px;
@@ -9,14 +8,33 @@
 
   @media (min-width: @desktop-width) {
     padding-bottom: 86px;
+  }
+}
+
+.additional-products__wrapper {
+  //display: grid;
+  @media (min-width: @desktop-width) {
     .grid-desktop;
   }
 }
 
+.additional-products__title-wrapper {
+  margin-bottom: 36px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 80px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column: 1 / -1;
+  }
+}
 
 .additional-products__title {
+  display: inline;
   margin: 0;
-  margin-bottom: 36px;
+  padding-right: 21px;
+  background-color: @white;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
@@ -31,10 +49,6 @@
 
     font-size: 36px;
     line-height: 36px;
-  }
-
-  @media (min-width: @desktop-width) {
-    grid-column: 1 / -1;
   }
 }
 
@@ -64,7 +78,8 @@
 }
 
 .additional-products__gift {
-  padding: 60px 60px 42px;
+  position: relative;
+  padding: 187px 60px 42px;
 
   font-size: 16px;
   line-height: 20px;
@@ -77,11 +92,57 @@
   background-position: center;
   background-size: cover;
 
+  @media (min-width: @tablet-width) {
+    padding: 71px 124px 69px 422px;
+  }
+
   @media (min-width: @desktop-width) {
+    padding: 187px 43px 42px 40px;
     grid-column: 4 / 5;
+  }
+
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 59px;
+    margin: 0 auto;
+    right: 0;
+    left: 0;
+    width: 78px;
+    height: 80px;
+    background-image: url("../img/gift.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+
+    @media(min-width: @tablet-width) {
+      width: 80px;
+      height: 82px;
+      top: 0;
+      bottom: 0;
+      margin: auto 0;
+      left: 77px;
+    }
+
+    @media(min-width: @desktop-width) {
+      top: 59px;
+      margin: 0 auto;
+      right: 0;
+      left: 0;
+      bottom: auto;
+    }
   }
 }
 
 .additional-products__gift-paragraph {
-
+  @media (min-width: @tablet-width) {
+    margin-left: auto;
+    text-align: left;
+    width: 161px;
+  }
+  @media(min-width: @desktop-width) {
+    text-align: center;
+  }
 }
