--- a/source/less/blocks/button-show-more.less
+++ b/source/less/blocks/button-show-more.less
@@ -16,4 +16,17 @@
   outline: inherit;
 
   cursor: pointer;
+
+  @media (min-width: @tablet-width) {
+    padding: 14px 26px;
+  }
+
+  &:hover,
+  &:focus {
+    background-color: @gray-4;
+  }
+
+  &:active {
+    color: rgba(@dark-gray, 30%);
+  }
 }
