--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -17,6 +17,16 @@
 
   cursor: pointer;
 
+  &:hover,
+  &:focus {
+    background-color: @green-2;
+  }
+
+  &:active {
+    background-color: @green-2;
+    color: rgba(@white, 30%);
+  }
+
   @media (min-width: @tablet-width) {
     padding: 14px 26px;
   }
