--- a/source/less/blocks/estimate-item.less
+++ b/source/less/blocks/estimate-item.less
@@ -1,10 +1,13 @@
 .estimate-item {
   width: 124px;
-  padding: 15px 20px 0;
+  padding: 15px 18px 0;
+
+  border: 2px solid @gray-5;
+  border-radius: 3px;
 
   @media (min-width: @tablet-width) {
     width: 162px;
-    padding: 15px 20px 0;
+    padding: 15px 9px 0;
   }
 }
 
@@ -23,13 +26,32 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 11px;
+
+    font-size: 30px;
+    line-height: 37px;
   }
 }
 
 .estimate-item__parameter {
   display: block;
+  padding: 0 14px;
+  margin-bottom: -12px;
+  background-color: @gray-3;
 
   font-size: 12px;
   line-height: 12px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 7px;
+    margin-bottom: -7px;
+    background-color: @white;
+
+    font-size: 14px;
+    line-height: 14px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: @gray-3;
+  }
 }
