--- a/source/less/blocks/link-accent.less
+++ b/source/less/blocks/link-accent.less
@@ -17,9 +17,19 @@
     margin: auto;
     margin-left: 15px;
     background-image: url("../img/icon-arrow.svg");
+    background-repeat: no-repeat;
+    background-position: left;
 
     @media(min-width: @tablet-width) {
       margin-left: 25px;
     }
+  }
+  &:hover::after,
+  &:focus::after {
+    background-image: url("../img/icon-arrow-hover.svg");
+  }
+
+  &:active {
+    opacity: 30%;
   }
 }
