--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -2,8 +2,17 @@
   width: 100%;
 
   @media (min-width: @desktop-width) {
-    padding: 95px 110px 107px;
+    padding: 95px 0 107px;
     position: relative;
+  }
+}
+
+.location__container {
+  margin: 0 auto;
+  max-width: @desktop-width;
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px;
   }
 }
 
@@ -57,8 +66,9 @@
   }
 }
 
-.location__image {
+.location__map {
   display: block;
+  border: none;
   margin: 0 auto;
   width: 100%;
 
