--- a/source/less/blocks/main-products.less
+++ b/source/less/blocks/main-products.less
@@ -5,7 +5,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 68px;
+    margin-bottom: 68px;
   }
 }
 
@@ -13,15 +13,14 @@
   display: grid;
   @media (min-width: @tablet-width) {
     grid-template-columns: 1fr 1fr;
-    gap: 60px;
+    gap: 141px 60px;
   }
 
   @media (min-width: @desktop-width) {
     .grid-desktop;
-    row-gap: 63px;
+    row-gap: 144px;
   }
 }
 
 .main-products__item {
-
 }
