--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -1,8 +1,15 @@
 .product-card {
   padding: 20px;
   border-top: 1px solid @gray-4;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-auto-rows: auto auto auto;
 
   @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
     padding: 0 36px 39px;
     border: none;
     background-color: @light-gray;
@@ -15,15 +22,47 @@
 }
 
 .product-card__image-link {
-
+  display: block;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  @media (min-width: @tablet-width) {
+    margin-top: -73px;
+    margin-bottom: 34px;
+    width: 168px;
+    height: 200px;
+  }
+  @media (min-width: @desktop-width) {
+    margin-top: -80px;
+    margin-bottom: 46px;
+    width: 172px;
+    height: 196px;
+  }
 }
 
 .product-card__image {
-
+  display: block;
+  width: 140px;
+  height: 112px;
+  @media (min-width: @tablet-width) {
+    width: 168px;
+    height: 200px;
+  }
+  @media (min-width: @desktop-width) {
+    width: 172px;
+    height: 196px;
+  }
 }
 
 .product-card__title-link {
+  display: block;
   text-decoration: none;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 21px;
+    min-height: 47px;
+  }
 }
 
 .product-card__title {
@@ -41,6 +80,7 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 24px;
+    text-align: center;
   }
 
   @media (min-width: @desktop-width) {
@@ -50,11 +90,29 @@
 }
 
 .product-card__properties-list {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: flex;
+  flex-direction: column;
   font-size: 12px;
   line-height: 16px;
+
   @media (min-width: @tablet-width) {
+    margin: 0;
+    margin-bottom: 33px;
+    align-self: stretch;
     font-size: 16px;
     line-height: 16px;
+  }
+}
+
+.product-card__property-wrapper {
+  display: flex;
+  justify-content: space-between;
+  @media (min-width: @tablet-width) {
+    padding-top: 7px;
+    padding-bottom: 9px;
+    border-bottom: 1px solid @gray-5;
   }
 }
 
@@ -63,9 +121,13 @@
 }
 
 .product-card__property-value {
-
+  margin: 0;
+  text-align: right;
 }
 
 .product-card__button {
-
+  grid-column: 1 / -1;
+  @media (min-width: @tablet-width) {
+    align-self: stretch;
+  }
 }
