--- a/source/less/blocks/show-more-card.less
+++ b/source/less/blocks/show-more-card.less
@@ -1,5 +1,55 @@
 .show-more-card {
+  position: relative;
   padding:  70px 20px 25px;
+
+  @media(min-width: @tablet-width) {
+    border: 2px solid @light-gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 161px 38px 38px;
+  }
+
+  @media(min-width: @tablet-width) {
+    padding: 160px 38px 41px;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 30px;
+    height: 2px;
+    top: 40px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    background-color: @gray-8;
+
+    @media(min-width: @tablet-width) {
+      width: 60px;
+      top: 82px;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 2px;
+    height: 30px;
+    top: 25px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    background-color: @gray-8;
+
+    @media(min-width: @tablet-width) {
+      height: 60px;
+      top: 52px;
+    }
+  }
 }
 
 .show-more-card__title {
@@ -13,6 +63,12 @@
   color: @light-black-2;
   text-transform: uppercase;
   text-align: center;
+
+  @media(min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 23px;
+  }
 }
 
 .show-more-card__description {
@@ -22,8 +78,14 @@
   font-size: 12px;
   line-height: 16px;
   text-align: center;
+
+  @media(min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 18px;
+    margin-bottom: auto;
+  }
 }
 
 .show-more-card__button {
-
+  align-self: stretch;
 }
