--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -2,12 +2,44 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  flex-wrap: wrap;
+
+  @media(min-width: @tablet-width) {
+    max-width: 140px;
+  }
+
+  @media(min-width: @desktop-width) {
+    max-width: 230px;
+  }
 }
 
 .social-list__item {
-
+  width: 28px;
+  height: 22px;
 }
 
 .social-list__link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: @gray-6;
+  position: relative;
 
+  &:hover,
+  &:focus {
+    color: @green;
+  }
+
+  &:active {
+    opacity: 30%;
+  }
+}
+
+
+.social-list__icon {
+  .centered;
 }
