--- a/source/less/blocks/application-form.less
+++ b/source/less/blocks/application-form.less
@@ -84,6 +84,7 @@
 .application-form__form-input {
   padding: 14px 20px;
   flex: auto;
+  min-width: 70%;
   margin-left: 13px;
   appearance: none;
   -moz-appearance: textfield;
