--- a/source/less/blocks/banner.less
+++ b/source/less/blocks/banner.less
@@ -19,7 +19,7 @@
   &::before {
     content: "";
     display: block;
-    height: 302px;
+    height: 63%;
     width: 100%;
     background-color: @green;
     background-image: url("../img/banner-background.jpg");
@@ -42,7 +42,7 @@
       width: 50%;
       margin-left: 50%;
       background-position: left;
-      background-size: cover;
+      background-size: contain;
     }
   }
 }
