--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -8,7 +8,6 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
     align-items: center;
     padding: 0 36px 39px;
     border: none;
@@ -128,6 +127,7 @@
 .product-card__button {
   grid-column: 1 / -1;
   @media (min-width: @tablet-width) {
+    margin-top: auto;
     align-self: stretch;
   }
 }
